add entrypoint for auth
