# backend/app/demo/v1/routes.py
@@ -8,6 +8,7 @@
 ###
 from __future__ import absolute_import
 
+from .api.auth import Auth
 from .api.knowledge_base import KnowledgeBase
 from .api.knowledge_base_KID import KnowledgeBaseKid
 from .api.knowledge_base_KID_document import KnowledgeBaseKidDocument
@@ -15,6 +16,7 @@ from .api.knowledge_base_KID_document_DID import KnowledgeBaseKidDocumentDid
 
 
 routes = [
+    dict(resource=Auth, urls=['/auth'], endpoint='auth'),
     dict(resource=KnowledgeBase, urls=['/knowledge_base'], endpoint='knowledge_base'),
     dict(resource=KnowledgeBaseKid, urls=['/knowledge_base/<KID>'], endpoint='knowledge_base_KID'),
     dict(resource=KnowledgeBaseKidDocument, urls=['/knowledge_base/<KID>/document'], endpoint='knowledge_base_KID_document'),
